--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,8 @@
 {
-  "display_name": "Costume Switch Testing",
+  "name": "Outfit Switcher",
+  "title": "Outfit Switcher",
+  "description": "Keeps a single character's outfits synchronized with the story stream.",
+  "display_name": "Outfit Switcher",
   "loading_order": 10,
   "js": "index.js",
   "css": "style.css",
